clusters/may-chang/pg-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pg-operator
  labels:
    name: pg-operator
